# wyckoff-research

./: .gitignore  main.py  pyproject.toml  requirements.txt
scripts/: macd_demo.py
src/wyckoff_research/: __init__.py  data.py  indicators.py  plotting.py  swings_recognition.py
