[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wyckoff-research"
version = "0.1.0"
description = "Wyckoff MACD swing research utilities."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "mplfinance",
    "openpyxl",
    "tinyshare",
]

[tool.setuptools.packages.find]
where = ["src"]

